--- a/learn.html
+++ b/learn.html
@@ -28,24 +28,24 @@
     <header class="bg-white dark:bg-slate-900 border-b dark:border-slate-800 sticky top-0 z-20 shadow-sm transition-colors transition-transform duration-300">
 
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex flex-col space-y-4 py-4">
-                <div class="flex flex-col sm:flex-row sm:justify-between sm:items-center gap-3 sm:gap-0 sm:h-16">
+            <div class="flex flex-col space-y-2 sm:space-y-4 py-2 sm:py-4">
+                <div class="flex flex-col sm:flex-row sm:justify-between sm:items-center gap-2 sm:gap-0 sm:h-16">
                     <div class="flex items-center justify-center sm:justify-start w-full sm:w-auto">
-                        <div class="rounded-xl border border-slate-200 dark:border-slate-800 bg-slate-50/80 dark:bg-slate-900/50 px-3 py-2 text-center sm:text-left">
-                            <div class="text-xs font-bold uppercase tracking-widest text-slate-800 dark:text-slate-100 text-center sm:text-left">Amino Acid Explorer</div>
-                            <div class="mt-1 flex flex-wrap items-center gap-2 text-[10px] text-slate-500 justify-center sm:justify-start">
+                        <div class="rounded-xl border border-slate-200 dark:border-slate-800 bg-slate-50/80 dark:bg-slate-900/50 px-2 py-1.5 sm:px-3 sm:py-2 text-center sm:text-left">
+                            <div class="text-[10px] sm:text-xs font-bold uppercase tracking-widest text-slate-800 dark:text-slate-100 text-center sm:text-left">Amino Acid Explorer</div>
+                            <div class="mt-0.5 sm:mt-1 flex flex-wrap items-center gap-2 text-[9px] sm:text-[10px] text-slate-500 justify-center sm:justify-start">
                                 <span id="commit-hash">loading...</span>
 
                             </div>
                         </div>
                     </div>
                     
-                    <div class="flex flex-wrap items-center justify-center sm:justify-end gap-4 sm:gap-6 w-full sm:w-auto">
-                        <nav class="flex flex-wrap justify-center sm:justify-start gap-4 sm:gap-8">
-                            <a href="index.html" class="nav-link py-5 text-sm font-medium text-slate-500 hover:text-slate-700 dark:text-slate-400 dark:hover:text-slate-200">Show</a>
-                            <a href="learn.html" class="nav-link active py-5 text-sm font-medium text-blue-600 border-b-2 border-blue-600">Learn</a>
-                            <a href="recall.html" class="nav-link py-5 text-sm font-medium text-slate-500 hover:text-slate-700 dark:text-slate-400 dark:hover:text-slate-200">Recall</a>
-                            <a href="draw.html" class="nav-link py-5 text-sm font-medium text-slate-500 hover:text-slate-700 dark:text-slate-400 dark:hover:text-slate-200">Draw</a>
+                    <div class="flex flex-wrap items-center justify-center sm:justify-end gap-3 sm:gap-6 w-full sm:w-auto">
+                        <nav class="flex flex-wrap justify-center sm:justify-start gap-3 sm:gap-8">
+                            <a href="index.html" class="nav-link py-2 sm:py-5 text-sm font-medium text-slate-500 hover:text-slate-700 dark:text-slate-400 dark:hover:text-slate-200">Show</a>
+                            <a href="learn.html" class="nav-link active py-2 sm:py-5 text-sm font-medium text-blue-600 border-b-2 border-blue-600">Learn</a>
+                            <a href="recall.html" class="nav-link py-2 sm:py-5 text-sm font-medium text-slate-500 hover:text-slate-700 dark:text-slate-400 dark:hover:text-slate-200">Recall</a>
+                            <a href="draw.html" class="nav-link py-2 sm:py-5 text-sm font-medium text-slate-500 hover:text-slate-700 dark:text-slate-400 dark:hover:text-slate-200">Draw</a>
                         </nav>
 
                         <button onclick="toggleDarkMode()" class="p-2 rounded-xl bg-slate-100 dark:bg-slate-800 text-slate-600 dark:text-slate-400 hover:bg-slate-200 dark:hover:bg-slate-700 transition-colors shrink-0" title="Toggle Dark/Light Mode">
@@ -59,7 +59,7 @@
                     </div>
                 </div>
                 
-                <div class="pb-2 space-y-2">
+                <div class="pb-1 sm:pb-2 space-y-1 sm:space-y-2">
                     <div class="sm:hidden">
                         <select class="filter-select w-full rounded-xl border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-900 px-3 py-2 text-sm font-semibold text-slate-600 dark:text-slate-200" onchange="applyFilter(this.value)">
                             <option value="all">All</option>
