--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <header class="bg-white dark:bg-slate-900 border-b dark:border-slate-800 sticky top-0 z-20 shadow-sm transition-colors transition-transform duration-300">
 
-        <div class="w-full px-4">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex flex-col space-y-2 sm:space-y-4 py-2 sm:py-4">
                 <div class="flex flex-col sm:flex-row sm:justify-between sm:items-center gap-2 sm:gap-0 sm:h-16">
                     <div class="flex items-center justify-center sm:justify-start w-full sm:w-auto">
