--- a/draw.html
+++ b/draw.html
@@ -47,10 +47,7 @@
                             <a href="index.html" class="nav-link py-2 sm:py-5 text-sm font-medium text-slate-500 hover:text-slate-700 dark:text-slate-400 dark:hover:text-slate-200">Show</a>
                             <a href="learn.html" class="nav-link py-2 sm:py-5 text-sm font-medium text-slate-500 hover:text-slate-700 dark:text-slate-400 dark:hover:text-slate-200">Learn</a>
                             <a href="recall.html" class="nav-link py-2 sm:py-5 text-sm font-medium text-slate-500 hover:text-slate-700 dark:text-slate-400 dark:hover:text-slate-200">Recall</a>
-                            <div class="flex flex-col items-center sm:items-start">
-                                <a href="draw.html" class="nav-link active py-2 sm:py-5 text-sm font-medium text-blue-600 border-b-2 border-blue-600">Draw</a>
-                                <span class="mt-0.5 text-[9px] sm:text-[10px] text-slate-400 leading-tight text-center sm:text-left max-w-[170px]">having difficulties drawing? try pressing 'clear' in between drawings</span>
-                            </div>
+                            <a href="draw.html" class="nav-link active py-2 sm:py-5 text-sm font-medium text-blue-600 border-b-2 border-blue-600">Draw</a>
                         </nav>
 
                         <button onclick="toggleDarkMode()" class="p-2 rounded-xl bg-slate-100 dark:bg-slate-800 text-slate-600 dark:text-slate-400 hover:bg-slate-200 dark:hover:bg-slate-700 transition-colors shrink-0" title="Toggle Dark/Light Mode">
@@ -113,6 +110,7 @@
                     <button id="away-btn" class="px-4 py-2 rounded-xl border border-slate-200 text-slate-600 hover:bg-slate-50 dark:border-slate-700 dark:text-slate-300 dark:hover:bg-slate-800 font-semibold">Away</button>
                     <button id="clear-drawing-btn" class="px-4 py-2 rounded-xl border border-slate-200 text-slate-600 hover:bg-slate-50 dark:border-slate-700 dark:text-slate-300 dark:hover:bg-slate-800 font-semibold">Clear</button>
                 </div>
+                <p class="mt-2 text-xs text-slate-400">having difficulties drawing? try pressing 'clear' in between drawings</p>
             </div>
 
             <div class="bg-white dark:bg-slate-900 rounded-2xl border border-slate-200 dark:border-slate-800 shadow-lg p-6 space-y-6">
