--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 }
 
                 card.innerHTML = `
-                    <div class="absolute top-3 right-3 z-10 opacity-100 pointer-events-auto sm:opacity-0 sm:pointer-events-none sm:group-hover:opacity-100 sm:group-hover:pointer-events-auto sm:group-focus-within:opacity-100 sm:group-focus-within:pointer-events-auto transition-opacity">
+                    <div class="absolute top-3 left-1/2 -translate-x-1/2 z-10 opacity-100 pointer-events-auto sm:opacity-0 sm:pointer-events-none sm:group-hover:opacity-100 sm:group-hover:pointer-events-auto sm:group-focus-within:opacity-100 sm:group-focus-within:pointer-events-auto transition-opacity">
                         <a href="${drawLink}" class="px-2.5 py-1.5 rounded-full bg-slate-900/90 text-white text-[11px] font-semibold shadow-md hover:bg-slate-900 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-400">Draw</a>
                     </div>
                     <div class="flex justify-between items-start mb-2">
