UI: Refactor Section 3; remove bezier, add explicit text link
- Reverted Section 3 in index.html from a link-grow card to a static div.
- Removed the 'link-grow' class from Section 3 and re-added a simple text hyperlink 'amino acids' within it, linking to cards.html.
- Removed all CSS rules associated with the '.link-grow' effect from style.css.

--- a/index.html
+++ b/index.html
@@ -73,12 +73,13 @@
             </div>
 
             <!-- Section 3 -->
-            <a href="cards.html" class="link-grow group bg-white dark:bg-slate-900 rounded-2xl shadow-sm border border-slate-200 dark:border-slate-800 p-6 hover:shadow-md hover:border-blue-300 dark:hover:border-blue-700 transition-all cursor-pointer">
-                <div class="h-12 w-12 bg-green-100 dark:bg-green-900/30 rounded-xl flex items-center justify-center mb-4 text-green-600 dark:text-green-400 group-hover:scale-110 transition-transform">
+            <div class="bg-white dark:bg-slate-900 rounded-2xl shadow-sm border border-slate-200 dark:border-slate-800 p-6 transition-shadow">
+                <div class="h-12 w-12 bg-green-100 dark:bg-green-900/30 rounded-xl flex items-center justify-center mb-4 text-green-600 dark:text-green-400">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.01 12.01 0 003 12c0 2.21.592 4.331 1.602 6.299m6.906-2.541a12.07 12.07 0 011.032 2.511m-10.424-6.046a8.972 8.972 0 00-.51 2.632m0 0a8.972 8.972 0 01-1.096 3.922M12 18.823l-3.099 1.701m5.66-3.795a9.006 9.006 0 00-4.908-4.908m-2.285 2.557a9.962 9.962 0 01-2.632-.51m-1.701 3.099l1.701 3.099M6.299 17.602l3.04-8.618m-4.016-5.618L3 12l.984 4.016m2.052-11.238l-4.016 3.04a9.962 9.962 0 00-.51 2.632m2.557 2.285a9.006 9.006 0 004.908 4.908"></path></svg>
                 </div>
-                <h2 class="text-xl font-bold text-slate-900 dark:text-white mb-2 group-hover:text-blue-600 dark:group-hover:text-blue-400">Biological and Biochemical Foundations of Living Systems</h2>
-            </a>
+                <h2 class="text-xl font-bold text-slate-900 dark:text-white mb-2">Biological and Biochemical Foundations of Living Systems</h2>
+                <a href="cards.html" class="mt-2 text-blue-600 dark:text-blue-400 hover:underline">amino acids</a>
+            </div>
             <!-- Section 4 -->
             <div class="bg-white dark:bg-slate-900 rounded-2xl shadow-sm border border-slate-200 dark:border-slate-800 p-6 hover:shadow-md transition-shadow">
                 <div class="h-12 w-12 bg-orange-100 dark:bg-orange-900/30 rounded-xl flex items-center justify-center mb-4 text-orange-600 dark:text-orange-400">
